welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: ';' expected but 'else' found.
	else if(litMessage == L)	
        ^BDRBuggle:11: error: ';' expected but 'else' found.
	else if(litMessage == I)	
        ^BDRBuggle:13: error: ';' expected but 'else' found.
	else if(litMessage == A)	
        ^BDRBuggle:15: error: ';' expected but 'else' found.
	else if(litMessage == B)	
        ^BDRBuggle:17: error: ';' expected but 'else' found.
	else if(litMessage == C)	
        ^BDRBuggle:19: error: ';' expected but 'else' found.
	else if(litMessage == Z)	
        ^BDRBuggle:21: error: ';' expected but 'else' found.
	else if(litMessage == Y)	
        ^BDRBuggle:23: error: ';' expected but 'else' found.
	else if(litMessage == X)	
        ^